Paginator on mobile bugfix

--- a/css/global.scss
+++ b/css/global.scss
@@ -28,7 +28,7 @@ body {
 		line-height: 24px;
 		&.code {
 			margin-top: 5px;
-			font: normal 20px/20px "Courier New";
+			font: normal 20px/20px monospace;
 			color: #aacfff;
 		}
 	}
